# economio

./: .env.sample  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: main.py  schemas.py  security.py
backend/app/models/: user.py
backend/app/routers/: auth.py  todos.py  users.py
backend/app/schemas/: request_body.py  response_body.py
backend/migrations/: env.py
backend/migrations/versions/: 3c8a2dbeaeb0_create_todos_table.py  81104fed613c_create_users_table.py  b2734f58aab8_create_users_table.py
backend/tests/: conftest.py  test_app.py  test_db.py  test_security.py
backend/tests/routers/: test_auth.py  test_todos.py  test_users.py
